Implement toggle on image size

--- a/bar.html
+++ b/bar.html
@@ -1,6 +1,14 @@
-<!-- this is the html version of the elements making the menu injected 
-into the page by javascript -->
-<div id="imageExtractUI">
-  <input type="checkbox" name="toggleDisplay" value="toggleDisplay" id="imageExtractToggle">
-  <label for="imageExtractToggleDisplay" id="imageExtractToggleLabel">Center</label>
+<!-- this is the html created by injecting the menu into the page by javascript
+for reference purposes -->
+<div id="imageExtractUIContainer">
+	<div class="imageExtractUI">
+		<input class="imageExtractCheckbox" name="Center" value="Center" 
+			id="CenterImageExtract" 		checked="true" type="checkbox">
+		<label class="imageExtractLabel" for="CenterImageExtract">Center</label>
+	</div>
+	<div class="imageExtractUI">
+		<input class="imageExtractCheckbox" name="Real size" value="Real size"
+			id="RealsizeImageExtract" type="checkbox">
+		<label class="imageExtractLabel" for="RealsizeImageExtract">Real size</label>
+	</div>
 </div>
