Refactor to use ES6 module system and ES7 await syntax, add better visual seperation on viewer settings

--- a/settings/settings.html
+++ b/settings/settings.html
@@ -29,29 +29,24 @@
   <div class = "setting">
     <input type = "checkbox" id = "keyboardShortcut1Enabled">
     <label for = "keyboardShortcut1Enabled">
-      Extract on CTRL+E</label>
+      Keyboard shortcut 1 enabled (default CTRL+E)</label>
   </div>
 
   <div class = "setting">
     <input type = "checkbox" id = "keyboardShortcut2Enabled">
     <label for = "keyboardShortcut2Enabled">
-      Extract on ALT+SHIFT+E</label>
+      Keyboard shortcut 2 enabled (default ALT+SHIFT+E)</label>
   </div>
 
   <div class = "setting">
     <input type = "checkbox" id = "keyboardShortcut3Enabled">
     <label for = "keyboardShortcut3Enabled">
-      Extract on ALT+SHIFT+I</label>
+      Keyboard shortcut 3 enabled (default ALT+SHIFT+I)</label>
   </div>
 
-  Not all shortcuts may work on all systems
-  <a href="https://github.com/Skeletonxf/duplicate-tab/issues/2">
-    Need a different shortcut?
-  </a>
+  <p>You can change the shortcut key combinations using the Manage Extension Shortcuts page</p>
+  <img src="/settings/manage-extension-shortcuts.png" class="reference-image"></img>
 
-  <script src = "/core/util.js"></script>
-  <script src = "/settings/defaults.js"></script>
-  <script src = "/settings/settings.js"></script>
-
+  <script type="module" src="/settings/settings.js"></script>
   </body>
 </html>
