Add notice on android about shortcuts not being supported

--- a/settings/settings.html
+++ b/settings/settings.html
@@ -26,6 +26,7 @@
 
   <h1 class = "imageExtractCenterStyle">Launch settings</h1>
 
+  <div class="setting-group" id="commandSettings">
   <div class = "setting">
     <input type = "checkbox" id = "keyboardShortcut1Enabled">
     <label for = "keyboardShortcut1Enabled">
@@ -45,7 +46,8 @@
   </div>
 
   <p>You can change the shortcut key combinations using the Manage Extension Shortcuts page</p>
-  <img src="/settings/manage-extension-shortcuts.png" class="reference-image"></img>
+  <img src="/settings/manage-extension-shortcuts.png" class="reference-image setting-image"></img>
+  </div>
 
   <script type="module" src="/settings/settings.js"></script>
   </body>
