--- a/settings/settings.html
+++ b/settings/settings.html
@@ -2,7 +2,8 @@
 <html>
   <head>
     <meta charset = "utf-8">
-    <link rel = "stylesheet" href = "/content.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel = "stylesheet" href = "/src/content.css">
     <link rel = "stylesheet" href = "/settings/styles.css">
   </head>
   <body>
