Fix accidental change to IDs

--- a/settings/settings.html
+++ b/settings/settings.html
@@ -13,23 +13,23 @@
   <div id="imageExtractUIContainer">
     <div id="imageExtractUIRow1">
       <div class="imageExtractUI">
-        <input class="imageExtractCheckbox" type="checkbox" id="CenterImageExtract" checked="true">
-        <label class="imageExtractLabel" for="CenterImageExtract">Center</label>
+        <input class="imageExtractCheckbox" type="checkbox" id="centerImages" checked="true">
+        <label class="imageExtractLabel" for="centerImages">Center</label>
       </div>
       <div class="imageExtractUI">
-        <input class="imageExtractCheckbox" type="checkbox" id="RealsizeImageExtract">
-        <label class="imageExtractLabel" for="RealsizeImageExtract">Real size</label>
+        <input class="imageExtractCheckbox" type="checkbox" id="realSizeImages">
+        <label class="imageExtractLabel" for="realSizeImages">Real size</label>
       </div>
       <div class="imageExtractUI">
-        <input class="imageExtractCheckbox" type="checkbox" id="ShowbackgroundimagesImageExtract">
-        <label class="imageExtractLabel" for="ShowbackgroundimagesImageExtract">Show background images</label>
+        <input class="imageExtractCheckbox" type="checkbox" id="showBackgroundImages">
+        <label class="imageExtractLabel" for="showBackgroundImages">Show background images</label>
       </div>
     </div>
     <p>If set to confirm, Image Extract will display a confirmation dialog before running, allowing you to cancel if you didn't mean to. This can help prevent you from accidentally losing your tabs, but it adds an extra step.</p>
     <div id="imageExtractUIRow2">
       <div class="imageExtractUI">
-        <input class="imageExtractCheckbox" type="checkbox" id="ConfirmbeforerunningImageExtract">
-        <label class="imageExtractLabel" for="ConfirmbeforerunningImageExtract">Confirm before running</label>
+        <input class="imageExtractCheckbox" type="checkbox" id="confirmBeforeRunningImageExtract">
+        <label class="imageExtractLabel" for="confirmBeforeRunningImageExtract">Confirm before running</label>
       </div>
     </div>
   </div>
